--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/DobTv" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/DOBTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
